"fix-mobile-navbar-cutoff"

--- a/styles.css
+++ b/styles.css
@@ -2548,19 +2548,22 @@ input[type="password"]::-ms-clear {
     }
 
     nav ul {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         gap: 0.5rem;
         margin: 0;
         width: 100%;
+        padding: 0;
     }
 
     nav ul li {
         width: 100%;
         text-align: center;
         background-color: rgba(255, 255, 255, 0.05);
-        padding: 2px 2px;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
 
@@ -2789,8 +2792,8 @@ input[type="password"]::-ms-clear {
     }
 
     nav ul {
-        flex-direction: column;
-        align-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.5rem;
     }
 
     nav ul li a {
